# NeuralNetworksLearning

./: README.md
01/: .clang_complete  CMakeLists.txt  train.cpp  trainmodel.py
01/datasets/: makeDS.py  trainsetSmall.txt
01/sources/: Dataset.cpp  Dataset.h  Layer.cpp  Layer.h  Network.cpp  Network.h  main.cpp
